--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Run Tests
         continue-on-error: true
-        run: mvn test -DbrowserType="chrome" -DheadlessExecution="true"  -Dtest="testngsteps.java""
+        run: mvn test -DbrowserType="chrome" -DheadlessExecution="true"  -Dtest="testngsteps.java"
 
  
 
